# AIE08_MyAwesomeRep

./: .gitignore  AI MakerSpace  GitHub Week 2.docx  AI MakerSpace Notion Week 2.docx  ALIGNED_SUBMISSION_GUIDE.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  DETAILED_NEXT_STEPS.md  FILE_ORGANIZATION_CORRECTED.md  FINAL_DEPLOYMENT_SUMMARY.md  FINAL_SUCCESS_SUMMARY.md  HOMEWORK_COMPLETION_SUMMARY.md  LICENSE  LOOM_VIDEO_QUICK_REFERENCE.md  LOOM_VIDEO_SCRIPT.md  Loom_Walkthrough_Script.md  MERGE.md  QUICK_SUBMISSION_TEMPLATE.md  README.md  README_complete_with_AI_responses.md  SESSION_3_LOOM_VIDEO_SCRIPT.md  SESSION_3_REFLECTION.md  SESSION_4_LOOM_VIDEO_SCRIPT.md  SESSION_4_REFLECTION.md  Session03_Alternative_Demo_Plan.md  Session03_Loom_Script.md  Session04_Loom_Script.md  Session04_Production_RAG_Implementation.ipynb  Session_07_Loom_Script.md  Session_08_Loom_Script.md  Session_09_Advanced_Retrieval_Assignment.ipynb  VERCEL_SETUP_GUIDE.md  e -Name completed, homework, vibe, session  Where-Object { $_ -notlike node_modules }  fix_and_start_session04.py  h origin s03-assignment-clean-final  index.html  pyproject.toml  rag-demo.html  requirements_session03.txt  requirements_session04.txt  run_session03.py  (+32 more)
.claude/: settings.local.json
00_AIM_Quicklinks/: README.md
01_Prototyping Best Practices & Vibe Check/: README.md
02_Embeddings_and_RAG/: Pythonic_RAG_Assignment.ipynb
03_End-to-End_RAG/: .env.example  MERGE.md  README_ENHANCED.md  (+7 more)
17_Deploying_Open_Source_Endpoints/: IMPLEMENTATION.md  agentic_rag.py  pyproject.toml  test_agentic_rag.ipynb
(+161 files in other folders)
