[project]
name = "17-deploying-open-source-endpoints"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "openai>=1.100.2",
    "together>=1.5.25",
    "langchain-together>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.3.0",
    "qdrant-client>=1.15.0",
    "pymupdf>=1.25.0",
    "langchain-text-splitters>=0.3.0",
    "tiktoken>=0.9.0",
]
